--- a/game.html
+++ b/game.html
@@ -9,12 +9,14 @@
 	</head>
 	
 	<body>
+		<script src="https://canvasjs.com/assets/script/canvasjs.min.js"> </script>
 	<header>
 		<h1>Milionerzy</h1>
 	</header>
 		<main>
 			<div id="hostText">
 				<p></p>
+				<div id="chart" style="height: 300px; width: 100%;"></div>
 			</div>
 			<div>
 				<h2 id="questionNumber">Pytanie x</h5>
