--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
 		html {
 			height: 100%;
 			width: 100%;
-			min-width: 760px;
+			min-width: 820px;
 		}
 
 		body {
@@ -59,6 +59,7 @@
 			font-family: 'Didact Gothic';
 			border: solid 4px #fdb827;
 			box-shadow: 3px 3px 10px #23120b;
+			margin-bottom: 20px;
 		}
 
 		.help:hover,
@@ -127,18 +128,73 @@
 			font-family: 'Didact Gothic';
 			border: solid 4px #fdb827;
 			box-shadow: 3px 3px 10px #23120b;
-			font-size: 2em;
+			font-size: 1.5em;
 		}
 
-		.answButt:hover,
-		.answButt:focus {
+		.answButt:hover {
 			transition: 0.7s;
 			background-color: #23120b;
 			color: #fdb827;
 		}
+
+		.answButt:focus {
+			outline: none;
+		}
+
+		.answButt:disabled {
+			background-color: #413c3a;
+			color: #2c2b2a;
+			border: rgb(172, 134, 10);
+		}
+
 		#endGameNick {
 			margin-left: 5px;
 			margin-right: 5px;
+		}
+
+		.money p {
+			width: 14em;
+			border-radius: 15px;
+			margin-left: 30px;
+			margin-right: 30px;
+			background-color: #470909;
+			color: #f1f1f1;
+			text-shadow: 2px 2px 5px #23120b;
+			box-shadow: 2px 2px 5px #23120b;
+			font-family: 'Didact Gothic';
+			font-size: 1.3em;
+		}
+		p.answered {
+			font-weight: bold;
+			background-color: #a11010;
+		}
+		#A2, #A7 {
+			background-color: #0c380b;
+		}
+		#A2.answered, #A7.answered {
+			background-color: #0f6822;
+		}
+		
+		#giveUp {
+			width: 200px;
+			border-radius: 15px;
+			color: #23120b;
+			background-color: #fdb827;
+			box-shadow: 5px 5px 10px #23120b;
+			font-family: 'Didact Gothic';
+			border: solid 4px #fdb827;
+			box-shadow: 3px 3px 10px #23120b;
+			font-size: 1.5em;
+		}
+		#giveUp:hover {
+			transition: 0.7s;
+			background-color: #23120b;
+			color: #fdb827;
+		}
+		#giveUp:disabled {
+			background-color: #413c3a;
+			color: #2c2b2a;
+			border: rgb(172, 134, 10);
 		}
 	</style>
 </head>
@@ -175,7 +231,7 @@
 			</div>
 			<div class="col-4 justify-content-center">
 				<div class="row text-center justify-content-center">
-					<button class="col-3 help" id="askAudience">
+					<button class="col-3 help" id="askAudience" data-toggle="tooltip" data-placement="top" title="Zapytaj publiczności">
 						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
 							class="bi bi-people-fill" viewBox="0 0 16 16">
 							<path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
@@ -184,13 +240,13 @@
 							<path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
 						</svg>
 					</button>
-					<button class="col-3 mx-3 help" id="fiftyFifty">
+					<button class="col-3 mx-3 help" id="fiftyFifty" data-toggle="tooltip" data-placement="top" title="Pół na pół">
 						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
 							class="bi bi-circle-half" viewBox="0 0 16 16">
 							<path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
 						</svg>
 					</button>
-					<button class="col-3 help" id="phoneFriend">
+					<button class="col-3 help" id="phoneFriend" data-toggle="tooltip" data-placement="top" title="Zapytaj przyjaciela">
 						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
 							class="bi bi-telephone-fill" viewBox="0 0 16 16">
 							<path fill-rule="evenodd"
@@ -198,21 +254,23 @@
 						</svg>
 					</button>
 				</div>
-				<div class="text-right justify-content-right">
-					<p class="text-right" id="A12">1 000 000 zł</p>
-					<p id="A11">500 000 zł</p>
-					<p id="A10">250 000 zł</p>
-					<p id="A9">125 000 zł</p>
-					<p id="A8">75 000 zł</p>
-					<p id="A7">40 000 zł</p>
-					<p id="A6">20 000 zł</p>
-					<p id="A5">10 000 zł</p>
-					<p id="A4">5000 zł</p>
-					<p id="A3">2000 zł</p>
-					<p id="A2">1000 zł</p>
-					<p id="A1">500 zł</p>
+				<div class="row text-center justify-content-center money mt-2">
+					<p id="A12" class="col-12">1 000 000 zł</p>
+					<p id="A11" class="col-12">500 000 zł</p>
+					<p id="A10" class="col-12">250 000 zł</p>
+					<p id="A9" class="col-12">125 000 zł</p>
+					<p id="A8" class="col-12">75 000 zł</p>
+					<p id="A7" class="col-12">40 000 zł</p>
+					<p id="A6" class="col-12">20 000 zł</p>
+					<p id="A5" class="col-12">10 000 zł</p>
+					<p id="A4" class="col-12">5000 zł</p>
+					<p id="A3" class="col-12">2000 zł</p>
+					<p id="A2" class="col-12">1000 zł</p>
+					<p id="A1" class="col-12">500 zł</p>
 				</div>
-				<button id="giveUp">Rezygnuję z gry</button>
+				<div class="row text-center justify-content-center money mt-2">
+					<button id="giveUp">Rezygnuję z gry</button>
+				</div>
 			</div>
 		</div>
 		<div class="row">
