--- a/game.html
+++ b/game.html
@@ -196,6 +196,9 @@
 			color: #2c2b2a;
 			border: rgb(172, 134, 10);
 		}
+		#chart {
+			margin-top: 15px;
+		}
 	</style>
 </head>
 
@@ -208,6 +211,7 @@
 			<div class="col-12">
 				<div id="hostText" class="justify-content-center text-center align-content-center align-items-center">
 					<p></p>
+					
 				</div>
 			</div>
 		</div>
@@ -231,7 +235,7 @@
 			</div>
 			<div class="col-4 justify-content-center">
 				<div class="row text-center justify-content-center">
-					<button class="col-3 help" id="askAudience" data-toggle="tooltip" data-placement="top" title="Zapytaj publiczności">
+					<button class="col-3 help" id="askAudience">
 						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
 							class="bi bi-people-fill" viewBox="0 0 16 16">
 							<path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
@@ -240,13 +244,13 @@
 							<path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
 						</svg>
 					</button>
-					<button class="col-3 mx-3 help" id="fiftyFifty" data-toggle="tooltip" data-placement="top" title="Pół na pół">
+					<button class="col-3 mx-3 help" id="fiftyFifty">
 						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
 							class="bi bi-circle-half" viewBox="0 0 16 16">
 							<path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
 						</svg>
 					</button>
-					<button class="col-3 help" id="phoneFriend" data-toggle="tooltip" data-placement="top" title="Zapytaj przyjaciela">
+					<button class="col-3 help" id="phoneFriend">
 						<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
 							class="bi bi-telephone-fill" viewBox="0 0 16 16">
 							<path fill-rule="evenodd"
