--- a/game.html
+++ b/game.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl-PL">
 
 <head>
 
-	<meta charset="UTF-8" />
-	<title>Milionerzy</title>
-	<link href='https://fonts.googleapis.com/css?family=Didact Gothic' rel='stylesheet'>
+	<meta charset="UTF-8"/>
+	<title>Quizerzy</title>
+	<link href='https://fonts.googleapis.com/css?family=Didact%20Gothic' rel='stylesheet'>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="scripts/game.js"></script>
